# plex-api.rs

./: .gitattributes  .gitignore  .mergify.yml  .release-please-manifest.json  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  codecov.yml  release-please-config.json
.github/: FUNDING.yml  bors.toml  dependabot.yml  mergify.yml
.github/actions-rs/: grcov.yml
.github/workflows/: linter.yml  lints-nightly.yml  lints.yml  merge-me.yml  release.yml  rust-clippy.yml  stable.yml  test.yml  test_anonymous.yml  test_authenticated.yml  test_new_attributes.yml  test_plex_account.yml  update_features.yml  update_pms.yml
crates/plex-api/: CHANGELOG.md  Cargo.toml  build.rs
crates/plex-api-test-helper/: Cargo.toml  README.md
crates/plex-api-test-helper/src/: lib.rs
crates/plex-api/examples/: friend-accept.rs  friend-delete.rs  friend-invite.rs  friend-share.rs  get-pin.rs  get-token.rs  items-debug.rs  link.rs  list-all-items.rs  myplex-users.rs  signout.rs  transcoding-dos.rs
crates/plex-api/src/: client.rs  error.rs  field.rs  http_client.rs  lib.rs  url.rs
crates/plex-api/src/media_container/: devices.rs  helpers.rs  home.rs  mod.rs  player.rs  server.rs  users.rs
crates/plex-api/src/media_container/preferences/: deserializer.rs  mod.rs
crates/plex-api/src/media_container/server/: feature.rs  library.rs  mod.rs
crates/plex-api/src/myplex/: account.rs  announcements.rs  claim_token.rs  device.rs  discover.rs  home.rs  mod.rs  pin.rs  privacy.rs  server.rs  webhook.rs
crates/plex-api/src/myplex/sharing/: filter.rs  friend.rs  mod.rs  server.rs  shareables.rs
crates/plex-api/src/player/: mod.rs
crates/plex-api/src/server/: library.rs  mod.rs  prefs.rs  transcode.rs
crates/plex-api/src/webhook/: mod.rs
crates/plex-api/tests/: client.rs  errors.rs  myplex.rs  myplex_announcements.rs  myplex_auth.rs  myplex_devices.rs  myplex_pin.rs  myplex_server.rs  myplex_sharing.rs  myplex_webhooks.rs  online_server.rs  server.rs  server_prefs.rs  server_stub_media.rs  timeline.rs  transcode.rs
crates/plex-api/tests/files/client/: resources.xml
crates/plex-api/tests/files/myplex/: devices.xml
crates/plex-api/tests/files/myplex/api/: resources.xml
crates/plex-api/tests/files/myplex/api/v2/user/: privacy.json  user_info_plexpass.json  user_info_plexpass_guest.json
crates/plex-api/tests/files/server/media/: providers.json  providers_unclaimed.json
crates/plex-api/tests/fixtures/: mod.rs
crates/plex-api/tests/fixtures/offline/: client.rs  mod.rs  myplex.rs  server.rs
crates/plex-api/tests/fixtures/online/: client.rs  mod.rs  server.rs
crates/plex-api/tests/mocks/epg/: index.json
crates/plex-api/tests/mocks/metadata/: index.json
crates/plex-api/tests/mocks/music/: index.json
crates/plex-api/tests/mocks/myplex/api/: announcements.xml  resources.xml
crates/plex-api/tests/mocks/myplex/api/claim/: token.json
crates/plex-api/tests/mocks/myplex/api/v2/: companions.json  features.json  friends_accepted_four_restricted.json  friends_accepted_mixed.json  friends_accepted_one_external.json  friends_accepted_one_restricted.json  friends_pending_received_one_external.json  pins_linked.json  pins_new.json  resources.json  shared_server_create.json
crates/plex-api/tests/mocks/myplex/api/v2/friends/: accept.json  invite_create.json
crates/plex-api/tests/mocks/myplex/api/v2/servers/: machine_id.json
crates/plex-api/tests/mocks/myplex/api/v2/user/: user_info_free.json  user_info_free_guest.json  user_info_plexpass.json  user_info_plexpass_guest.json  webhooks_two.json
crates/plex-api/tests/mocks/myplex/media/: providers.json
crates/plex-api/tests/mocks/podcasts/: index.json
crates/plex-api/tests/mocks/server/: prefs.json
crates/plex-api/tests/mocks/server/media/: metadata_108.json  metadata_161.json  metadata_168.json  movie_library.json  music_albums.json  music_library.json  music_search_skrillex_albums.json  music_tracks.json  photo_album.json  photo_library.json  providers_free.json  providers_plexpass.json  tv_episodes.json  tv_library.json  tv_seasons.json
crates/plex-api/tests/mocks/sonos/: resources.xml
crates/plex-api/tests/mocks/timeline/: metadata_182_1.json  metadata_182_2.json  metadata_182_3.json  metadata_182_4.json  timeline.json
crates/plex-api/tests/mocks/transcode/: decision_13194.json  empty_sessions.json  metadata_1036.json  metadata_13194.json  metadata_157786.json  metadata_159637.json  music_mp3.json  music_sessions.json  video_dash_h264_mp3.json  video_dash_h265_aac.json  video_hls_vp9_pcm.json  video_offline_h264_mp3.json  video_offline_refused.json  video_sessions.json
crates/plex-api/tests/mocks/vod/: vod.json
crates/plex-api/tests/mocks/webshows/: index.json
crates/plex-cli/: CHANGELOG.md  Cargo.toml
crates/plex-cli/src/: flags.rs  main.rs  preferences.rs  wait.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: flags.rs  get_last_plex_tags.rs  main.rs  modify_data.rs  plex_data.rs  plex_docker_image.rs  test.rs  utils.rs
plex-api/: Cargo.toml
plex-api/src/: config.rs  error.rs  lib.rs  media_container.rs  prelude.rs  serde_helpers.rs
plex-api/src/http/: client.rs
plex-api/src/media_container/: device.rs  library.rs  media.rs  mod.rs  server.rs  settings.rs  user.rs
plex-api/src/media_container/media/: metadata.rs  mod.rs  stream.rs
plex-api/src/media_container/settings/: mod.rs
plex-api/src/my_plex/: auth.rs  claim_token.rs  devices.rs  mod.rs  privacy.rs  resources.rs  users.rs  webhooks.rs
plex-api/src/server/: connect.rs  mod.rs  my_plex.rs  settings.rs
plex-api/src/tests/: headers.rs  mod.rs
plex-api/src/tests/media_container/: devices.rs  library.rs  mod.rs  resources.rs  server.rs  settings.rs  users.rs
plex-api/src/tests/my_plex/: devices.rs  resources.rs  users.rs
plex-api/src/tests/server/: connect.rs  library.rs  mod.rs  settings.rs
plex-api/tests/: lib.rs
plex-cli/: Cargo.toml
plex-cli/src/: clap-config.yaml  main.rs
plex-cli/src/subcommands/: claim.rs  mod.rs  settings.rs  token.rs  unclaim.rs  wait.rs
tools-bootstrap-plex/: Cargo.toml
(+9 files in other folders)
