[package]
name = "plex-api"
version = "0.0.1"
authors = ["Andrey Yantsen <andrey@janzen.su>"]
edition = "2018"
description = "Work in progress, not ready for any use. See github for details. Library for communication with Plex server."
license = "MIT"
repository = "https://github.com/andrey-yantsen/plex-api.rs"

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
uname = "0.1"
uuid = { version = "0.8", features = ["v4", "serde"] }
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde-xml-rs = "0.3"
serde_with = "1.3"
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
url = "2.1"
async-trait = "0.1"
async-std = "1.4"
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros"] }

[features]
default = []
test_connect_authenticated = []
test_connect_anonymous = []
