[package]
name = "plex-api"
version = "0.0.2"
authors = ["Andrey Yantsen <andrey@janzen.su>"]
edition = "2018"
description = "Work in progress, not ready for any use. See github for details. Library for communication with Plex server."
license = "MIT"
repository = "https://github.com/andrey-yantsen/plex-api.rs"

[dependencies]
reqwest = { version = "0.10", features = ["json", "gzip"] }
uname = "0.1"
uuid = { version = "0.8", features = ["v4", "serde"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.17", features = [ "serialize" ] }
serde_with = "1.4"
serde_repr = "0.1"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
url = { version = "2.1", features = ["serde"] }
async-trait = "0.1"
thiserror = "1.0"
serde-aux = "0.6"
semver = { version = "0.9", features = ["serde"] }

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
futures-retry = "0.4"

[features]
default = []
test_connect_authenticated = []
test_connect_anonymous = []
test_new_attributes = []
