[package]
name = "plex-api"
version = "0.0.2"
authors = ["Andrey Yantsen <andrey@janzen.su>"]
edition = "2018"
description = "Work in progress, not ready for any use. See github for details. Library for communication with Plex server."
license = "MIT"
repository = "https://github.com/andrey-yantsen/plex-api.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = { version = "0.22", features = [ "serialize" ] }
serde_with = "1.6"
serde_repr = "0.1"
chrono = { version = "0.4.10", features = ["serde"] }
lazy_static = "1.4"
url = { version = "2.2", features = ["serde"] }
async-trait = "0.1"
thiserror = "1.0"
serde-aux = "2.1"
semver = { version = "0.11", features = ["serde"] }
sys-info = "0.8"

[dev-dependencies]
tokio = { version = "1.2", features = ["macros", "rt-multi-thread"] }
futures-retry = "0.6"
paste = "1.0"

[features]
default = []
test_connect_authenticated = []
test_connect_anonymous = []
test_new_attributes = []
