[package]
name = "plex-cli"
version = "0.0.2"
authors = ["Andrey Yantsen <andrey@janzen.su>"]
edition = "2018"

[dependencies]
plex-api = { path = "../plex-api" }
log = "0.4"
fern = "0.6"
chrono = "0.4"
tokio = { version = "0.3", features = ["macros"] }
clap = { version = "2.33", features = ["yaml", "color"] }
thiserror = "1.0"
keyring = "0.9"
