[package]
name = "plex-api-test-helper"
version = "0.0.0"
authors = ["Andrey Yantsen <andrey@janzen.su>"]
edition = "2021"
publish = false
license = "MIT/Apache-2.0"

[package.metadata.workspaces]
independent = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0", features = ["full"] }
quote = "^1.0"
proc-macro2 = "^1.0"

