[package]
name = "plex-api"
version = "0.0.5"
authors = ["Andrey Yantsen <andrey@janzen.su>"]
categories = ["api-bindings"]
edition = "2018"
description = "Library for communication with Plex server. Work in progress, not ready for any use. See github for details."
license = "MIT/Apache-2.0"
repository = "https://github.com/andrey-yantsen/plex-api.rs"
readme = "../../README.md"
rust-version = "1.53.0"

[dependencies]
isahc = { version = "^1.6.0", features = ["json", "text-decoding"] }
uuid = { version = "^0.8", features = ["v4", "serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
futures = "^0.3.21"
serde_with = { version = "^1.12", features = ["json"] }
quick-xml = { version = "^0.22", features = [ "serialize" ] }
serde_plain = "^1.0.0"
serde_repr = "^0.1"
time = { version = "^0.3", features = ["serde-well-known"] }
http = "^0.2.6"
http-serde = "^1.1"
serde_urlencoded = "^0.7.1"
thiserror = "^1.0"
sys-info = "^0.9"

[dev-dependencies]
httpmock = "^0.6"
async-std = { version = "^1.10", features = ["attributes"] }
plex-api-test-helper = { path = "../plex-api-test-helper" }
rstest = "^0.12.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]

[features]
tests_deny_unknown_fields = []
tests_only_online = []
tests_only_online_unclaimed_server = ["tests_only_online"]
tests_only_online_claimed_server = ["tests_only_online"]
