[package]
name = "plex-api"
version = "0.0.11"
authors = ["Andrey Yantsen <andrey@janzen.su>"]
categories = ["api-bindings"]
edition = "2021"
description = "Library for communication with Plex server. Work in progress, not ready for any use. See github for details."
license = "MIT/Apache-2.0"
repository = "https://github.com/andrey-yantsen/plex-api.rs"
readme = "../../README.md"
rust-version = "1.70.0"

[dependencies]
isahc = { version = "^1.7.2", features = ["json", "text-decoding"] }
uuid = { version = "^1.2", features = ["v4", "serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
futures = "^0.3.25"
serde_with = { version = "^3.0", features = ["json"] }
quick-xml = { version = "^0.30", features = [ "serialize" ] }
serde_plain = "^1.0.1"
serde_repr = "^0.1"
time = { version = "^0.3", features = ["serde-well-known", "serde-human-readable"] }
http = "^0.2.8"
http-serde = "^1.1"
serde_urlencoded = "^0.7.1"
thiserror = "^1.0"
sysinfo = "0.29.9"
monostate = "^0.1.2"
serde-aux = "^4.1.2"
enum_dispatch = "^0.3.8"
secrecy = { version = "^0.8", features = ["serde"] }
tracing = { version = "^0.1.37", features = ["attributes"] }

[build-dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
inflections = "^1.0"
regex = "^1.7"

[dev-dependencies]
httpmock = "^0.6"
async-std = { version = "^1.12", features = ["attributes"] }
plex-api-test-helper = { path = "../plex-api-test-helper" }
rstest = "^0.18.1"
rpassword = "^7.2"
dash-mpd = "^0.14.0"
hls_m3u8 = "^0.4.1"
mp4 = "^0.14.0"
mp3-metadata = "^0.3.4"
image = "^0.24.5"
pico-args = "^0.5.0"
tracing-subscriber = "^0.3"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]

[features]
tests_deny_unknown_fields = []
tests_only_online = []
tests_only_online_unclaimed_server = ["tests_only_online"]
tests_only_online_claimed_server = ["tests_only_online"]
tests_shared_server_access_token = []
