[package]
name = "plex-cli"
version = "0.0.2"
authors = ["Andrey Yantsen <andrey@janzen.su>"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "Command line interface for managing Plex Media Server"

[package.metadata.workspaces]
independent = true

[dependencies]
plex-api = { version = ">= 0.0.6", path = "../plex-api" }
tokio = { version = "^1.23", features = ["macros", "rt-multi-thread", "time"] }
anyhow = "^1.0"
xflags = "^0.3"
