[package]
name = "xtask"
version = "0.0.0"
edition = "2018"
publish = false
license = "MIT/Apache-2.0"

[package.metadata.workspaces]
independent = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
flate2 = "^1.0"
xshell = "^0.1"
xflags = "^0.2"
uuid = { version = "^0.8", features = ["v4"] }
plex-api = { path = "../plex-api" }
tokio = { version = "^1.16", features = ["rt-multi-thread"] }
walkdir = "^2"
semver = "^1.0.7"
ureq = "^2.4.0"
regex = "^1.5"
testcontainers = "^0.13"

[target.'cfg(not(windows))'.dependencies]
users = "^0.11.0"
