[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false
license = "MIT/Apache-2.0"

[package.metadata.workspaces]
independent = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
flate2 = "^1.0"
xshell = "^0.2"
xflags = "^0.3"
uuid = { version = "^1.2", features = ["v4"] }
plex-api = { path = "../plex-api" }
tokio = { version = "^1.23", features = ["rt-multi-thread"] }
walkdir = "^2"
semver = "^1.0.16"
ureq = "^2.6.0"
regex = "^1.7"
testcontainers = "^0.14"
pathdiff = "^0.2.1"

[target.'cfg(not(windows))'.dependencies]
users = "^0.11.0"
